--- a/cashfree/index.html
+++ b/cashfree/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cashfree Payment Gateway Integration | Guruji Gyan</title>
     <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
     <style>
         body {
@@ -22,6 +25,7 @@
             width: 90%;
             max-width: 400px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            margin: 20px;
         }
 
         .loading {
@@ -206,7 +210,7 @@
             <img src="/cashfree/cashfree-logo.png" class="logo" alt="Logo">
         </div>
         <p class="paying-text">Paying</p>
-        <h1 class="company-name">YourCompany India Private Limited</h1>
+        <h1 class="company-name">Guruji Gyan Cashfree Payments</h1>
         <p class="amount">Amount Payable: <span id="amount-display">₹ 100.00</span></p>
 
         <div class="input-group">
