Paytm: PG Improved

--- a/paytm/index.html
+++ b/paytm/index.html
@@ -106,7 +106,7 @@
             <img src="/paytm/logo.webp" class="logo" alt="Paytm">
         </div>
         <p class="paying-text">Paying</p>
-        <h1 class="company-name">Paytm Staging Payments</h1>
+        <h1 class="company-name">Guruji Gyan Payments (Paytm)</h1>
         <p class="amount">Amount Payable: <span id="amount-display">₹ 100.00</span></p>
 
         <div class="input-group">
